--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
   "orientation": "any",
   "icons": [
     {
+      "src": "icons/favicon.PNG",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
